Accept drag and drop event from non-KDE Filemanagers

Thunar uses 'text/uri-list' in its mimetype, but konsole only accept
d&d events whose mimetype contains 'text/plain'.

Patch by Jekyll Wu <adaptee@gmail.com>
BUG: 219023
FIXED-IN: 4.8
REVIEW: 102176